--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -19,8 +19,8 @@ The following links provide you with the available options to run apps on AWS us
   </div>
   <div class="col">
     <RedisCard
-      title="How to Build a Slack Bot to Retrieve Lost Files Using AWS S3 and RediSearch"
-      description="Building a Slack Bot to Retrieve Lost Files Using AWS S3 and RediSearch"
+      title="How to Build a Slack Bot to Retrieve Lost Files Using AWS S3 and Search"
+      description="Building a Slack Bot to Retrieve Lost Files Using AWS S3 and Search"
       page="/create/aws/slackbot"
     />
   </div>
