--- a/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
+++ b/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
@@ -12,10 +12,10 @@ The Enterprise Tiers of Azure Cache for Redis is generally available as a native
 - [Active geo-replication, with up to 99.999% availability](https://redis.com/redis-enterprise/technology/active-active-geo-distribution/) - Preview
 - [Redis on Flash (RoF)](https://redis.com/redis-enterprise/technology/redis-on-flash/)
 - [Disk persistence with recovery](https://redis.com/redis-enterprise/technology/durable-redis/) - Preview
-- Redis Enterprise modules:
-  - [RediSearch 2.0](https://redis.com/blog/redisearch-2-build-modern-applications-interactive-search/)
-  - [RedisTimeSeries](https://redis.com/modules/redis-timeseries/)
-  - [RedisBloom](https://redis.com/modules/redis-bloom/)
+- Redis Enterprise features:
+  - [Search](https://redis.com/blog/redisearch-2-build-modern-applications-interactive-search/)
+  - [Time Series](https://redis.com/modules/redis-timeseries/)
+  - [Probabilistic data structures](https://redis.com/modules/redis-bloom/)
 - Scaling
   - Datasets up to 13TB
   - Up to 2M concurrent client connections
