--- a/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive-gears.mdx
+++ b/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window-reactive-gears.mdx
@@ -110,10 +110,10 @@ In order to use our RedisGear function from our SpringBoot application we need t
 [LettuceMod](https://github.com/redis-developer/lettucemod) is a Java client for Redis Modules based on Lettuce created by [Julien Ruaux ](https://github.com/jruaux).
 It supports the following modules in standalone or cluster configurations:
 
-- RedisGears
-- RedisJSON
-- RediSearch
-- RedisTimeSeries
+- Triggers and Functions
+- JSON
+- Search
+- Time Series
 
 To use LettuceMod we'll add the dependency to the Maven POM as shown:
 
