--- a/docs/develop/java/spring/rate-limiting/index-ratelimiting.mdx
+++ b/docs/develop/java/spring/rate-limiting/index-ratelimiting.mdx
@@ -48,8 +48,8 @@ The following links provides you with the available options to develop your appl
 
 <div class="col">
   <RedisCard
-    title="Atomicity with Gears"
-    description="Improving atomicity and performance with RedisGears"
+    title="Atomicity with Triggers and Functions"
+    description="Improving atomicity and performance with Triggers and Functions"
     page="/develop/java/spring/rate-limiting/fixed-window/reactive-gears"
   />
 </div>
