--- a/docs/develop/java/spring/redis-and-spring-course/index-redis-and-spring-course.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/index-redis-and-spring-course.mdx
@@ -87,8 +87,8 @@ along with other teaching assistants. Join us on the Redis Discord server.
 
    <div class="col">
      <RedisCard
-        title="6. Domain Models with RedisJSON"
-        description="Domain Models with RedisJSON."
+        title="6. Domain Models with Redis JSON"
+        description="Domain Models with Redis JSON."
         page="/develop/java/redis-and-spring-course/lesson_6"
         />
   </div>
@@ -97,8 +97,8 @@ along with other teaching assistants. Join us on the Redis Discord server.
 <div class="row">
  <div class="col">
      <RedisCard
-        title="7. Search with RediSearch"
-        description="Search with RediSearch."
+        title="7. Search with Redis Search"
+        description="Search with Redis Search."
         page="/develop/java/redis-and-spring-course/lesson_7"
         />
   </div>
