--- a/docs/develop/java/spring/redis-and-spring-course/lesson_7/index-lesson_7.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_7/index-lesson_7.mdx
@@ -35,11 +35,11 @@ Having a rich query and aggregation engine in your Redis database opens the door
 
 :::warn
 
-Spring RediSearch and LettuSearch have been merged into multi-module client [**LettuceMod**](https://github.com/redis-developer/lettucemod). Please use LettuceMod instead.
+Spring Redis Search and LettuSearch have been merged into multi-module client [**LettuceMod**](https://github.com/redis-developer/lettucemod). Please use LettuceMod instead.
 
 :::
 
-Spring RediSearch (https://github.com/RediSearch/spring-redisearch) is a library built on LettuSearch (https://github.com/RediSearch/lettusearch), providing access to Redis Stack from Spring applications.
+Spring Redis Search (https://github.com/RediSearch/spring-redisearch) is a library built on LettuSearch (https://github.com/RediSearch/lettusearch), providing access to Redis Stack from Spring applications.
 LettuSearch is a Java client for Redis Stack based on the popular Redis Java client library Lettuce.
 Adding the `spring-redisearch` dependency
 In your Maven `pom.xml`, add the following dependency:
