--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -45,7 +45,7 @@ Use the following commands to setup a Redis server locally:
 ```
 
 :::info INFO
-Redis Stack unifies and simplifies the developer experience of the leading Redis data store, modules and the capabilities they provide. Redis Stack bundles five Redis modules: RedisJSON, RedisSearch, RedisGraph, RedisTimeSeries, and RedisBloom.
+Redis Stack unifies and simplifies the developer experience of the leading Redis data store, modules and the capabilities they provide. Redis Stack supports the folliwng in additon to Redis: JSON, Search, Time Series, Triggers and Functions, and Probilistic data structures.
 [Learn more](/create/redis-stack)
 :::
 
@@ -172,7 +172,7 @@ Check out a few of these apps below, or [click here to access the complete list]
 
 ![marketplace](images/hackernews.png)
 
-[A Hacker News Clone project](https://launchpad.redis.com/?id=project%3Aredis-hacker-news-demo) built in NextJS, NodeJS and Express based on RediSearch & RedisJSON
+[A Hacker News Clone project](https://launchpad.redis.com/?id=project%3Aredis-hacker-news-demo) built in NextJS, NodeJS and Express based on Search and JSON
 
 </div>
 </div>
