--- a/docs/develop/node/node-crash-course/welcome/index-welcome.mdx
+++ b/docs/develop/node/node-crash-course/welcome/index-welcome.mdx
@@ -32,8 +32,8 @@ By following the materials in this course, you can expect to learn about:
 - The benefits of adding Redis to your stack, when and how to use it.
 - How to leverage Redis in the context of a modern Node.js Express application with the ioredis client.
 - Using RedisInsight to browse and manage a Redis instance.
-- Modeling domain objects with Redis Hashes, querying them with RediSearch.
-- Storing and querying document data with the RedisJSON module.
+- Modeling domain objects with Redis Hashes, querying them with Redis Search.
+- Storing and querying document data with Redis JSON.
 - Asynchronous messaging and fast data ingestion with Redis Streams.
 - Speeding up response times with Redis caching and Express middleware.
 - Scaling your application using Redis as a session store for Express.
