--- a/docs/develop/node/redis-om/index-redis-om.mdx
+++ b/docs/develop/node/redis-om/index-redis-om.mdx
@@ -28,7 +28,7 @@ Fortunately, my buddy [Dylan Beattie](https://dylanbeattie.net/) is literally th
 
 ## Humble Beginnings
 
-We're using Redis as our database—that's the whole idea behind Redis OM. So, you'll need some Redis, specifically with [RediSearch](https://redisearch.io) and [RedisJSON](https://redisjson.io) installed. The easiest way to do this is to set up a free [Redis Cloud](https://redis.com/try-free) instance. But, you can also use Docker:
+We're using Redis as our database—that's the whole idea behind Redis OM. So, you'll need some Redis, specifically with [Search](https://redisearch.io) and [JSON](https://redisjson.io) installed. The easiest way to do this is to set up a free [Redis Cloud](https://redis.com/try-free) instance. But, you can also use Docker:
 
     $ docker run -p 6379:6379 redis/redis-stack:latest
 
