--- a/docs/explore/import/index-import.mdx
+++ b/docs/explore/import/index-import.mdx
@@ -66,7 +66,7 @@ _- **Warning**: Importing data erases all existing content in the database._
 
 [Redis Input/Output Tools (RIOT)](/explore/riot) is a set of import/export command line utilities for Redis:
 
-- RIOT DB: migrate from an RDBMS to Redis, RediSearch, RedisJSON, ...
+- RIOT DB: migrate from an RDBMS to Redis, Search, JSON, ...
 - RIOT File: bulk import/export data from/to files.
 - RIOT Gen: generate sample Redis datasets for new feature development and proof of concept.
 - RIOT Redis: live replication from any Redis database (including AWS Elasticache) to another Redis database.
