--- a/docs/explore/redisinsightv2/index-redisinsightv2.mdx
+++ b/docs/explore/redisinsightv2/index-redisinsightv2.mdx
@@ -50,8 +50,8 @@ import RedisCard from '@theme/RedisCard';
 
 <div class="col">
   <RedisCard
-    title="How To Use The RediSearch Plugin in RedisInsight v2.0"
-    description="Perform Database Search and Analytics using the RediSearch Plugin in RedisInsight v2.0"
+    title="How To Use Redis Search in RedisInsight v2.0"
+    description="Perform Database Search and Analytics using Redis Search in RedisInsight v2.0"
     page="/explore/redisinsightv2/redisearch"
   />
 </div>
