--- a/docs/explore/redisinsightv2/profiler/index-profiler.mdx
+++ b/docs/explore/redisinsightv2/profiler/index-profiler.mdx
@@ -20,15 +20,15 @@ It basically runs the Redis MONITOR command and generates a summarized view. MON
 
 Follow the below instructions to test drive RedisInsight Profiler tool introduced under the RedisInsight v2.0.4 release:
 
-### Step 1. Create Redis database with RedisTimeSeries module enabled
+### Step 1. Create Redis database with Redis Time Series module enabled
 
 ![alt_text](images/profiler_2.png)
 
-Visit [https://developer.redis.com/create/rediscloud](https://developer.redis.com/create/rediscloud) and create a Redis database. [Follow these steps to enable RedisTimeSeries module ](https://developer.redis.com/howtos/redistimeseries)on Redis Enterprise Cloud.
+Visit [https://developer.redis.com/create/rediscloud](https://developer.redis.com/create/rediscloud) and create a Redis database. [Follow these steps to enable Redis Time Series module ](https://developer.redis.com/howtos/redistimeseries)on Redis Enterprise Cloud.
 
 ### Step 2. Create database
 
-Click “Create Database”. Enter database name and select RedisTimeSeries Module.
+Click “Create Database”. Enter database name and select Redis Time Series.
 
 ![alt_text](images/profiler_3.png)
 
