--- a/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsightv2/redisearch/index-redisearch.mdx
@@ -28,7 +28,7 @@ Redis Stack allows you to quickly create indexes on datasets (stored as Redis Ha
 
 ### Step 1. Create a Redis Database
 
-[Follow this link to create a Redis database using a Docker container](/create/redis-stack) that comes with the RediSearch module enabled.
+[Follow this link to create a Redis database using a Docker container](/create/redis-stack) that comes with Search.
 
 ### Step 2: Download RedisInsight
 
