--- a/docs/howtos/redisgears/index-redisgears.mdx
+++ b/docs/howtos/redisgears/index-redisgears.mdx
@@ -65,6 +65,6 @@ The results here show the number of occurences of each word in all of our string
 
 ### References
 
-- [How to build a Fraud Detection System using RedisGears and RedisBloom](/howtos/frauddetection)
-- [Writing Your Serverless function using RedisGears Browser Tool](/explore/redisinsight/redisgears)
+- [How to build a Fraud Detection System using Probabilistic Data Structure](/howtos/frauddetection)
+- [Writing Your Serverless function using RedisInsight Browser Tool](/explore/redisinsight/redisgears)
 - [RedisGears Module](https://redis.com/modules/redis-gears/)
