--- a/docs/howtos/redisjson/json-using-redisearch/index-json-using-redisearch.mdx
+++ b/docs/howtos/redisjson/json-using-redisearch/index-json-using-redisearch.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-json-using-redisearch
-title: How to index JSON document using RediSearch
-sidebar_label: Indexing JSON document using RediSearch
+title: How to index JSON document using Redis Search
+sidebar_label: Indexing JSON document using Redis Search
 slug: /howtos/redisjson/json-using-redisearch
 ---
