--- a/docs/howtos/solutions/microservices/common-data/redis-enterprise.mdx
+++ b/docs/howtos/solutions/microservices/common-data/redis-enterprise.mdx
@@ -2,12 +2,11 @@ You can use **Redis Enterprise** as a multi-model primary database. Redis Enterp
 
 Redis Enterprise has many built-in modular capabilities, making it a unified, real-time data platform. Redis Enterprise is far more than a document database.
 
-- **RedisJSON**: Persists JSON documents
-- **RediSearch**: Indexes and searches JSON documents
-- **RedisGraph**: A fast and easy-to-use graph database
-- **RedisBloom:** Provides bloom filters and other probabilistic data structures
-- **RedisTimeSeries**: Supports time series data structures
-- **RedisGears**: Syncs data to external databases via different pattern (write-behind/ write-through) or executes custom logic.
+- **JSON**: Persists JSON documents
+- **Search**: Indexes and searches JSON documents
+- **Probabilistic data structures**: Provides bloom filters and other probabilistic data structures
+- **Time Series**: Supports time series data structures
+- **Triggers and Functions**: Syncs data to external databases via different pattern (write-behind/ write-through) or executes custom logic.
 
 Use [RedisInsight](https://redis.com/redis-enterprise/redis-insight/) to view your Redis data or to play with raw Redis commands in the workbench.
 
