--- a/docs/modules/redisgears/index-redisgears.mdx
+++ b/docs/modules/redisgears/index-redisgears.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-redisgears
-title: RedisGears
-sidebar_label: RedisGears
+title: Triggers and Functions
+sidebar_label: Triggers and Functions
 slug: /modules/redisgears
 ---
