--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -23,10 +23,10 @@ The Redis Data Source for Grafana is a plug-in that allows users to connect to t
 - Redis Cluster and Sentinel supported since version 1.2.
 - Data Source supports:
 
-  - [RedisTimeSeries](https://oss.redis.com/redistimeseries/): `TS.GET`, `TS.INFO`, `TS.MRANGE`, `TS.QUERYINDEX`, `TS.RANGE`
-  - [RedisGears](https://oss.redis.com/redisgears/): `RG.DUMPREGISTRATIONS`, `RG.PYEXECUTE`, `RG.PYSTATS`
-  - [RedisSearch](https://oss.redis.com/redisearch/): `FT.INFO`
-  - [RedisGraph](https://oss.redis.com/redisgraph/): `GRAPH.QUERY`, `GRAPH.SLOWLOG`
+  - [Redis Time Series](https://oss.redis.com/redistimeseries/): `TS.GET`, `TS.INFO`, `TS.MRANGE`, `TS.QUERYINDEX`, `TS.RANGE`
+  - [Triggers and Functions](https://oss.redis.com/redisgears/): `RG.DUMPREGISTRATIONS`, `RG.PYEXECUTE`, `RG.PYSTATS`
+  - [Search](https://oss.redis.com/redisearch/): `FT.INFO`
+  - [Graph](https://oss.redis.com/redisgraph/): `GRAPH.QUERY`, `GRAPH.SLOWLOG`
 
 <Tabs
   defaultValue="Homebrew"
