--- a/docs/tools/riot/index-riot.mdx
+++ b/docs/tools/riot/index-riot.mdx
@@ -11,7 +11,7 @@ import TabItem from '@theme/TabItem';
 Redis Input/Output Tools (RIOT) is a set of import/export command line utilities for Redis:
 
 - RIOT Redis: live replication from any Redis database (including AWS Elasticache) to another Redis database.
-- RIOT DB: migrate from an RDBMS to Redis, RediSearch, RedisJSON, ...
+- RIOT DB: migrate from an RDBMS to Redis, Search, JSON, ...
 
 <Tabs
   defaultValue="RIOT Redis"
