--- a/docs/tutorials/redisearch/getting-started/index-redisearch-getting-started.mdx
+++ b/docs/tutorials/redisearch/getting-started/index-redisearch-getting-started.mdx
@@ -1,8 +1,8 @@
 ---
 id: index-redisearch-getting-started
-title: RediSearch Getting Started
+title: Redis Search Getting Started
 slug: /tutorials/redisearch/getting-started/
-description: A tutorial that guide developer to learn about indexing and querying Redis database using RediSearch
+description: A tutorial that guide developer to learn about indexing and querying Redis database using Redis Search
 keywords:
   - tutorial
   - redis
@@ -10,4 +10,4 @@ keywords:
   - index
 ---
 
-    * [RediSearch Getting Started & Sample Application](https://github.com/RediSearch/redisearch-getting-started/blob/master/docs/001-introduction.md)
+    * [Redis Search Getting Started & Sample Application](https://github.com/RediSearch/redisearch-getting-started/blob/master/docs/001-introduction.md)
