--- a/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
+++ b/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
@@ -436,5 +436,5 @@ to
 
 - [Project Source Code](https://github.com/redis-developer/basic-analytics-dashboard-redis-bitmaps-nodejs)
 - [Use cases of Bitmaps](https://redis.io/topics/data-types-intro)
-- [How to Build a Slack Bot to Retrieve Lost Files Using AWS S3 and RediSearch](/create/aws/slackbot)
+- [How to Build a Slack Bot to Retrieve Lost Files Using AWS S3 and Search](/create/aws/slackbot)
 - [How to Deploy and Manage Redis Database on AWS Using Terraform](/create/aws/terraform)
