--- a/docs/develop/node/node-crash-course/introducingredisinsight/index-introducingredisinsight.mdx
+++ b/docs/develop/node/node-crash-course/introducingredisinsight/index-introducingredisinsight.mdx
@@ -22,7 +22,7 @@ import Authors from '@theme/Authors';
 
 RedisInsight is a free product from Redis that provides an intuitive graphical user interface for managing Redis databases. RedisInsight allows you to browse Redis and monitor changes in data in real time. You can edit data stored in existing keys, create and delete new ones, and run redis-cli commands.
 
-RedisInsight also supports some popular Redis modules, and we'll use it in this course to look at data managed by the RedisJSON and RediSearch modules. The data type specific views in RedisInsight make visualizing even the most complex Redis data types easy. We'll benefit from this when we look at Redis Streams later in the course.
+RedisInsight also supports some popular Redis features, and we'll use it in this course to look at data managed by Redis JSON and Search. The data type specific views in RedisInsight make visualizing even the most complex Redis data types easy. We'll benefit from this when we look at Redis Streams later in the course.
 
 For this course, we'll be running Redis in a Docker container. While you can complete the course using just the redis-cli interface provided with the container, we'd strongly recommend that you [download and install RedisInsight](https://redis.com/redis-enterprise/redis-insight/) to benefit from its graphical interface and specialized views for Redis data types and modules.
 
