--- a/docs/develop/node/node-crash-course/sampleapplicationoverview/index-sampleapplicationoverview.mdx
+++ b/docs/develop/node/node-crash-course/sampleapplicationoverview/index-sampleapplicationoverview.mdx
@@ -67,7 +67,7 @@ For each location that users can check in at, we're going to maintain two types 
 }
 ```
 
-We've given each location an ID and a category—we'll use the category to search for locations by type later on. The "location" field stores the coordinates in longitude, latitude format… this is the opposite from the usual latitude, longitude format. We'll see how to use this to perform geospatial searches later when we look at the RediSearch module.
+We've given each location an ID and a category—we'll use the category to search for locations by type later on. The "location" field stores the coordinates in longitude, latitude format… this is the opposite from the usual latitude, longitude format. We'll see how to use this to perform geospatial searches later when we look at Redis Search.
 
 For each location, we're also storing the total number of checkins that have been recorded there by all of our users, the total number of stars that those checkins gave the location, and an average star rating per checkin for the location.
 
@@ -98,7 +98,7 @@ The second type of data that we want to maintain for each location is what we'll
 }
 ```
 
-We want to build an API that allows us to retrieve all or some of these extra details, and keep the overall structure of the document intact. For that, we'll need the RedisJSON module as we'll see later.
+We want to build an API that allows us to retrieve all or some of these extra details, and keep the overall structure of the document intact. For that, we'll need Redis with JSON support as we'll see later.
 
 ## Checkins
 
