--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -39,7 +39,7 @@ You can either run Redis server in a Docker container or directly on your machin
 ```
 
 :::info INFO
-Redis Stack unifies and simplifies the developer experience of the leading Redis modules and the capabilities they provide. Redis Stack bundles five Redis modules: RedisJSON, RedisSearch, RedisGraph, RedisTimeSeries, and RedisBloom
+Redis Stack unifies and simplifies the developer experience of the leading Redis modules and the capabilities they provide.
 [Learn more](/create/redis-stack)
 :::
 
@@ -160,7 +160,7 @@ A complete introduction to Redis for Python developers.
 - [How to store JSON documents in Redis with Python](/howtos/redisjson/using-python)
 - [Python based application on Heroku using Redis](/howtos/herokupython/)
 - [How to build a Rate Limiter using Redis](/howtos/ratelimiting/)
-- [Writing Your Serverless function using RedisGears Browser Tool](/explore/redisinsight/redisgears/)
+- [Writing Your Serverless function using RedisInsight Browser Tool](/explore/redisinsight/redisgears/)
 
 ##
 
