--- a/docs/develop/ruby/index-ruby.mdx
+++ b/docs/develop/ruby/index-ruby.mdx
@@ -35,7 +35,7 @@ Follow the below commands to setup a Redis server on Mac OS:
 ```
 
 :::info INFO
-Redis Stack unifies and simplifies the developer experience of the leading Redis modules and the capabilities they provide. Redis Stack bundles five Redis modules: RedisJSON, RedisSearch, RedisGraph, RedisTimeSeries, and RedisBloom.
+Redis Stack unifies and simplifies the developer experience of the leading Redis modules and the capabilities they provide.
 [Learn more](/create/redis-stack)
 :::
 
