--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -177,8 +177,8 @@ In a clustered database, each node can have different values for slowlog. You wi
 
 - [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
-- [Unified Search and Analytics using RediSearch Browser Tool](/explore/redisinsight/redisearch)
-- [Managing time-series data using RedisTimeSeries Browser Tool](/explore/redisinsight/redistimeseries)
+- [Unified Search and Analytics using RedisInsight Browser Tool](/explore/redisinsight/redisearch)
+- [Managing time-series data using RedisInsight Browser Tool](/explore/redisinsight/redistimeseries)
 - [Analyze Your Redis commands using RedisInsight Profiler tool](/explore/redisinsight/profiler)
 - [Debugging Redis using RedisInsight Slowlog Tool](/explore/redisinsight/slowlog)
 - [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
