--- a/docs/explore/redisinsight/usinghelm/index-usinghelm.mdx
+++ b/docs/explore/redisinsight/usinghelm/index-usinghelm.mdx
@@ -121,8 +121,8 @@ Install Docker Desktop for Mac and enable Kubernetes as shown below:
 
 - [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
-- [Unified Search and Analytics using RediSearch Browser Tool](/explore/redisinsight/redisearch)
-- [Managing time-series data using RedisTimeSeries Browser Tool](/explore/redisinsight/redistimeseries)
+- [Unified Search and Analytics using RedisInsight Browser Tool](/explore/redisinsight/redisearch)
+- [Managing time-series data using RedisInsight Browser Tool](/explore/redisinsight/redistimeseries)
 - [Analyze Your Redis commands using RedisInsight Profiler tool](/explore/redisinsight/profiler)
 - [Debugging Redis using RedisInsight Slowlog Tool](/explore/redisinsight/slowlog)
 - [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
