--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -41,8 +41,8 @@ We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [Y
 | Sat 11 / Sun 12 Dec    | Second weekend hands-on exercise                           | [Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend2)                                                                                         |
 | Mon 13 Dec, 4pm UTC    | Sort it out! All about Sorted Sets                         | <iframe src="https://www.youtube.com/embed/iV-NcMpQa7c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
 | Tue 14 Dec, 4:45pm UTC | What's the Score? Top K with Redis Bloom!                  | <iframe src="https://www.youtube.com/embed/u940lEA2Pv4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
-| Wed 15 Dec, 10am UTC   | Seek and You May Find… Introducing RediSearch! (Part 1)    | <iframe src="https://www.youtube.com/embed/6uxpXvM-WSQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
-| Wed 15 Dec, 10am UTC   | Seek and You May Find… Introducing RediSearch! (Part 2)    | <iframe src="https://www.youtube.com/embed/pOWpESEXzrc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
+| Wed 15 Dec, 10am UTC   | Seek and You May Find… Introducing Redis Search! (Part 1)    | <iframe src="https://www.youtube.com/embed/6uxpXvM-WSQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
+| Wed 15 Dec, 10am UTC   | Seek and You May Find… Introducing Redis Search! (Part 2)    | <iframe src="https://www.youtube.com/embed/pOWpESEXzrc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
 | Thu 16 Dec, 3:45pm UTC | Introducing Redis OM for Node.js                           | <iframe src="https://www.youtube.com/embed/y0Sx_5Csld8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
 | Fri 17 Dec, 4pm UTC    | Object Mapping and More! Redis OM for .NET                 | <iframe src="https://www.youtube.com/embed/DnsRTa3dFxo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
 | Sat 18 / Sun 19 Dec    | Third weekend hands-on exercise                            | [Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend3)                                                                                         |
@@ -50,7 +50,7 @@ We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [Y
 | Tue 21 Dec, 5pm UTC    | What's the deal with Pub/Sub?                              | <iframe src="https://www.youtube.com/embed/Eyj8nYeEGps" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
 | Wed 22 Dec, 5:15pm UTC | Spring into Redis OM! (Redis OM for Java/Spring Framework) | <iframe src="https://www.youtube.com/embed/Fmzo48y67NM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
 | Thu 23 Dec, 5pm UTC    | Finding your way with Redis Geospatial!                    | <iframe src="https://www.youtube.com/embed/zst8F8l5LrI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
-| Fri 24 Dec, 9:15am UTC | Herding Cats with RedisJSON                                | <iframe src="https://www.youtube.com/embed/feYfWlgyYW0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
+| Fri 24 Dec, 9:15am UTC | Herding Cats with Redis JSON                                | <iframe src="https://www.youtube.com/embed/feYfWlgyYW0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> |
 
 ## Meet the Team
 
