--- a/docs/guides/indexing/indexing-querying.mdx
+++ b/docs/guides/indexing/indexing-querying.mdx
@@ -17,13 +17,13 @@ You have various ways to create index using Redis core datastructures, for examp
 - Sets for creating random indexes.
 - Lists for creating simple iterable indexes and last N items indexes.
 
-When using these datastructures you must create your own API to keep the index up-to-date. To simplify and automate this task, Redis community has created the RediSearch module that allows indexing and querying.
+When using these datastructures you must create your own API to keep the index up-to-date. To simplify and automate this task, Redis has Search that allows indexing and querying.
 
-### Indexing and Querying with RediSearch
+### Indexing and Querying with Redis Search
 
-The easiest way to index and query data in Redis is to use the [RediSearch](http://redisearch.io/) module.
+The easiest way to index and query data in Redis is to use the [Redis Search](http://redisearch.io/) module.
 
-You can follow the [RediSearch Tutorial](https://github.com/RediSearch/redisearch-getting-started) to learn more about it and look at the following video from Redis University:
+You can follow the [Redis Search Tutorial](https://github.com/RediSearch/redisearch-getting-started) to learn more about it and look at the following video from Redis University:
 
 <div class="text--center">
 <iframe width="672" height="378" src="https://www.youtube.com/embed/B10nHEdW3NA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -32,4 +32,4 @@ Querying, Indexing, and Full-text Search in Redis
 
 </div>
 
-If you have questions about RediSearch and other module ask them in the [Redis Community Forum](https://forum.redis.com/c/modules/redisearch/58).
+If you have questions about Redis Search and other module ask them in the [Redis Community Forum](https://forum.redis.com/c/modules/redisearch/58).
