--- a/docs/modules/redisbloom/index-redisbloom.mdx
+++ b/docs/modules/redisbloom/index-redisbloom.mdx
@@ -1,18 +1,18 @@
 ---
 id: index-redisbloom
-title: RedisBloom
-sidebar_label: RedisBloom
+title: Probabilistic Data Structures
+sidebar_label: Probabilistic Data
 slug: /modules/redisbloom
 ---
 
-RedisBloom extends Redis core to support additional probabilistic data structures. It allows for solving computer science problems in a constant memory space with extremely fast processing and a low error rate. It supports scalable Bloom and Cuckoo filters to determine (with a specified degree of certainty) whether an item is present or absent from a collection.
+Redis Stack provides additional probabilistic data structures. It allows for solving computer science problems in a constant memory space with extremely fast processing and a low error rate. It supports scalable Bloom and Cuckoo filters to determine (with a specified degree of certainty) whether an item is present or absent from a collection.
 
-The RedisBloom module provides four data types:
+The four probabilistic data types:
 
 - Bloom filter: A probabilistic data structure that can test for presence. A Bloom filter is a data structure designed to tell you, rapidly and memory-efficiently, whether an element is present in a set. Bloom filters typically exhibit better performance and scalability when inserting items (so if you're often adding items to your dataset then Bloom may be ideal).
 - Cuckoo filter: An alternative to Bloom filters, Cuckoo filters comes with additional support for deletion of elements from a set. These filters are quicker on check operations.
 - Count-min sketch: A count-min sketch is generally used to determine the frequency of events in a stream. You can query the count-min sketch to get an estimate of the frequency of any given event.
-- Top-K: The Top-k probabilistic data structure in RedisBloom is a deterministic algorithm that approximates frequencies for the top k items. With Top-K, you’ll be notified in real time whenever elements enter into or are expelled from your Top-K list. If an element add-command enters the list, the dropped element will be returned.
+- Top-K: The Top-k probabilistic data structure is a deterministic algorithm that approximates frequencies for the top k items. With Top-K, you’ll be notified in real time whenever elements enter into or are expelled from your Top-K list. If an element add-command enters the list, the dropped element will be returned.
 
 ### Step 1. Register and subscribe
 
@@ -20,7 +20,7 @@ Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis 
 
 ![Redisbloom](redisbloom1.png)
 
-### Step 2. Create a database with RedisBloom Module
+### Step 2. Create a database with Redis Stack
 
 ![Redisbloom](redisbloom.png)
 
@@ -28,11 +28,11 @@ Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis 
 
 Follow [this](explore/redisinsight) link to know how to connect to a database
 
-### Step 4. Getting Started with RedisBloom
+### Step 4. Getting Started with Probabilistic Data Structures
 
-In the next steps you will use some basic RedisBloom commands. You can run them from the Redis command-line interface (redis-cli) or use the CLI available in RedisInsight. (See part 2 of this tutorial to learn more about using the RedisInsight CLI.) To interact with RedisBloom, you use the BF.ADD and BF.EXISTS commands.
+In the next steps you will use some basic commands. You can run them from the Redis command-line interface (redis-cli) or use the CLI available in RedisInsight. (See part 2 of this tutorial to learn more about using the RedisInsight CLI.) To interact with Redis, you use the BF.ADD and BF.EXISTS commands.
 
-Let’s go ahead and test drive some RedisBloom-specific operations. We will create a basic dataset based on unique visitors’ IP addresses, and you will see how to:
+Let’s go ahead and test drive some probabilistic-specific operations. We will create a basic dataset based on unique visitors’ IP addresses, and you will see how to:
 
 - Create a Bloom filter
 - Determine whether or not an item exists in the Bloom filter
@@ -102,4 +102,4 @@ In the above example, the first command shows the result as “1” for both the
 
 ### Next Steps
 
-- Learn more about RedisBloom in the [Quick Start](https://oss.redis.com/redisbloom/Quick_Start/) tutorial.
+- Learn more about Probabilistic data in the [Quick Start](/howtos/quick-start) tutorial.
